[project]
name = "openbalance-tools"
version = "0.1.0"
description = "Give AI agents autonomous payment capabilities via OpenBalance"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://openbalance.ai"
Repository = "https://github.com/openbalance-ai/agent-tools"
Documentation = "https://docs.openbalance.ai"

[project.scripts]
openbalance-mcp = "openbalance_tools.mcp_server:main"
